--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -7,7 +7,7 @@ jobs:
 
     steps: 
       - checkout 
-      - run: ma deps 
+      - run: make deps 
       - run: make test       
 
 workflows: 
